--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
