--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KardioL0g"
         tools:targetApi="31">
-
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
         <service
             android:name=".services.FallDetectionService"
             android:enabled="true"
