--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.android.gms:play-services-ads:23.1.0'
     implementation 'com.google.firebase:firebase-storage:21.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.0'
 }
