--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
+        android:maxSdkVersion="32"
+        tools:ignore="ScopedStorage" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -39,10 +40,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KardioL0g"
         tools:targetApi="31">
-        <activity
-            android:name=".files.PdfViewerActivity"
-            android:exported="false"
-            android:theme="@style/Theme.KardioL0g" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
