--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.google.zxing:core:3.3.3'
-    implementation "androidx.health.connect:connect-client:1.1.0-alpha07"
+    implementation 'androidx.health.connect:connect-client:1.0.0-alpha10'
 }
